// Copyright (c) 2024 Digital Asset (Switzerland) GmbH and/or its affiliates. All rights reserved.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package com.digitalasset.canton.protocol.v1;

import "com/digitalasset/canton/crypto/v0/crypto.proto";
import "com/digitalasset/canton/protocol/v0/sequencing.proto";
import "com/digitalasset/canton/protocol/v1/common.proto";
import "com/digitalasset/canton/protocol/v1/merkle.proto";
import "com/digitalasset/canton/time/v0/time_proof.proto";
import "scalapb/scalapb.proto";

// Messages sent by a participant as part of the transfer protocol

message TransferOutCommonData {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  string source_domain = 2;
  repeated string stakeholders = 3;
  repeated string admin_parties = 4;
  string uuid = 5;
  string source_mediator = 6;
  int32 source_protocol_version = 7; // added in v1
}

message TransferViewTree {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  BlindableNode common_data = 1;
  BlindableNode participant_data = 2;
}

message TransferInMediatorMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  TransferViewTree tree = 1;
}

message TransferOutMediatorMessage {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  TransferViewTree tree = 1;
}

message TransferOutView {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  string submitter = 2;
  string contract_id = 3;
  string target_domain = 4;
  com.digitalasset.canton.time.v0.TimeProof target_time_proof = 5;
  int32 target_protocol_version = 6; // added in v1
}

message TransferInCommonData {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  string target_domain = 2;
  repeated string stakeholders = 3;
  string uuid = 4;
  string target_mediator = 6;
  int32 target_protocol_version = 7; // added in v1
}

message TransferInView {
  option (scalapb.message).companion_extends = "com.digitalasset.canton.version.StableProtoVersion";

  com.digitalasset.canton.crypto.v0.Salt salt = 1;
  string submitter = 2;
  v1.SerializableContract contract = 3;
  v0.SignedContent transfer_out_result_event = 4;
  bytes creating_transaction_id = 5;
  int32 source_protocol_version = 6; // added in v1
}
